# octopus-tariff-comparison

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-25-octopus-tariff-comparison.md  2026-06-25-tariff-detail-and-latest-tracker.md  2026-06-26-add-12m-fixed-comparison.md  2026-06-26-agile-comparison.md  2026-06-26-agile-hour-breakdown.md  2026-06-26-honest-comparison.md
docs/superpowers/specs/: 2026-06-25-add-12m-fixed-comparison-design.md  2026-06-25-octopus-tariff-comparison-design.md  2026-06-25-tariff-detail-and-latest-tracker-design.md  2026-06-26-agile-comparison-design.md  2026-06-26-agile-hour-breakdown-decomposition-design.md  2026-06-26-honest-comparison-design.md
src/octopus_compare/: account.py  agile.py  agile_breakdown.py  agile_costing.py  agile_insight.py  agile_pipeline.py  cli.py  client.py  config.py  consumption.py  costing.py  coverage.py  money.py  pipeline.py  rates.py  report.py  tracker.py  units.py  verdict.py
tests/: test_account.py  test_agile.py  test_agile_breakdown.py  test_agile_costing.py  test_agile_insight.py  test_agile_pipeline.py  test_agile_report.py  test_cli.py  test_client.py  test_config.py  test_consumption.py  test_costing.py  test_coverage.py  test_fixed.py  test_live_eval.py  test_money.py  test_pipeline.py  test_rates.py  test_report.py  test_smoke.py  test_tracker.py  test_units.py  test_verdict.py  test_versions.py
tests/fixtures/: api_samples.py  bills.py
